Refactored user storage system